--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <base href="/bootstrap_website">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,7 +29,7 @@
                     <a class="nav-link active" href="/" id="home" onclick="onNavItemClick('home')">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html" id="about" onclick="onNavItemClick('about')">About</a>
+                    <a class="nav-link" href="/about.html" id="about" onclick="onNavItemClick('about')">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -45,7 +46,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html" id="contact" onclick="onNavItemClick('contact')">Contact Us</a>
+                    <a class="nav-link" href="contact.html" id="/contact" onclick="onNavItemClick('contact')">Contact Us</a>
                 </li>
 
 
